[project]
name = "spacecases-leaderboards"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "python-dotenv == 1.0.1",
    "spacecases-common == 0.13.1",
    "ruff == 0.8.4",
    "mypy == 1.14.0",
    "aiohttp == 3.11.11",
    "asyncpg == 0.30.0",
    "asyncpg-stubs == 0.30.0"
]

[tool.mypy]
exclude = [
    "build",
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true